# hyperlpr4Android

./: .gitignore  README.md  clean.bat
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/pr/hyperlpr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/src/: FastDeskew.cpp  PlateSegmentation.cpp
app/src/main/java/pr/hyperlpr/: DeepAssetUtil.java  DeepCarUtil.java  DeepMediaFileUtil.java  Globals.java  MainActivity.java  ReadyDataActivity.java  ResultActivity.java
app/src/main/java/pr/hyperlpr/task/: ImageBean.java  ImageExtractionService.java  ProcessImageTask.java
app/src/main/java/pr/hyperlpr/task/callback/: ProcessStateCallback.java  ProgramImageCallback.java
app/src/main/java/pr/hyperlpr/util/: DeepAssetUtil.java  DeepCarUtil.java  DeepMediaFileUtil.java  Utils.java
app/src/main/java/pr/hyperlpr/view/: NumberProgressBar.java  OnProgressBarListener.java
app/src/main/java/pr/platerecognization/: MainActivity.java
app/src/main/jni/: javaWarpper.cpp
app/src/main/jni/include/: Pipeline.h  PlateDetection.h
app/src/main/jni/src/: FastDeskew.cpp  Pipeline.cpp  PlateSegmentation.cpp  Recognizer.cpp  util.h
app/src/main/res/layout/: activity_main.xml  activity_ready.xml  activity_result.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/pr/hyperlpr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
